results.log
g-0-1
Wed 14 Sep 2022 04:38:17 PM CDT
  File "/home/est_posgrado_alejandro.lemus/DL2/Tarea1/pix2pix.py", line 393
    plt.imshow(((example_target + 1)/2) # Right-view
              ^
SyntaxError: '(' was never closed
Wed 14 Sep 2022 04:38:17 PM CDT
